<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Roadies</string>
    <string name="emailHint">Email</string>
    <string name="pwdHint">Password</string>
    <string name="loginBtnText">Login</string>
    <string name="regBtnText">Create Account</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="hintName">Name</string>
    <string name="confPwdHint">Confirm Password</string>
    <string name="singInBtnText">Create Account</string>
    <string name="btnCancelText">Cancel</string>
    <string name="title_activity_my_trips">MyTripsActivity</string>
    <string name="tripTextView">Planned Trips</string>
    <string name="tripCmpltdTextView">Completed Trips</string>
    <string name="detailsTripCmpltdTextView">Trip Completed</string>
    <string name="addNewTrip">Add New Trip</string>
    <string name="settings">Settings</string>
    <string name="menuLogout">Logout</string>
    <string name="title_activity_add_trip">AddTripActivity</string>
    <string name="hintTripName">Trip Name</string>
    <string name="hintStartingPoint">Type your Starting Point</string>
    <string name="detailsStartingPoint">Start At</string>
    <string name="hintDest">"Type your Destination "</string>
    <string name="detailsDestPoint">Destination</string>
    <string name="tvAddDest">Add more Destinations</string>
    <string name="hintAddDest1">Add Destination 1</string>
    <string name="hintAddDest2">Add Destination 2</string>
    <string name="hintAddDest3">Add Destination 3</string>
    <string name="hintAddDest4">Add Destination 4</string>
    <string name="hintAddDest5">Add Destination 5</string>
    <string name="ok">OK</string>
    <string name="btnSave">Save</string>
    <string name="btnClearTrip">Clear</string>
    <string name="title_activity_start_trip">StartTripActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_weather_string">Weather</string>
    <string name="hello_world">Hello World</string>
    <string name="namelabel">Name: </string>
    <string name="str_tv_distance_time">Distance</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_weather">WeatherActivity</string>
    <string name="action_weather">Weather</string>
    <string name="action_edit_trip">Edit Trip</string>
    <string name="change_city">Change city</string>
    <string name="hintAddStartDate">Add Start Date</string>
    <string name="detailsStartDate">Start Date</string>
    <string name="hintAddStartTime">Add Start Time</string>
    <string name="detailsStartTime">Start Time</string>
    <string name="detailsStartTripButtonLabel">Start Trip</string>
    <string name="detailsInPrgTripButtonLabel">Go to Trip</string>
    <string name="detailsVerifyCompletedTripButtonLabel">End Trip</string>
    <string name="facebook_app_id">1399660237024559</string>
    <!-- Put your own APP ID here -->
    <string name="open_weather_maps_app_id">11111</string>
    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>
    <string name="place_not_found">Sorry, no weather data found.</string>
    <string name="title_activity_planned_trips">PlannedTripsActivity</string>
    <string name="title_activity_trip_details">TripDetailsActivity</string>
    <string name="string_OR">OR</string>
	<string name="detailsAddnDestn1">Destination 1</string>
    <string name="detailsAddnDestn2">Destination 2</string>
    <string name="detailsAddnDestn3">Destination 3</string>
    <string name="detailsAddnDestn4">Destination 4</string>
    <string name="detailsAddnDestn5">Destination 5</string>
</resources>
