<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/road_trip_one" >

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:orientation="vertical"
        tools:context="${relativePackage}.${activityClass}" >

        <EditText
            android:id="@+id/editTextTripName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintTripName"
            android:inputType="none"
            android:textColor="#ffffff"
            android:textColorHint="#FBA16C" />

        <AutoCompleteTextView
            android:id="@+id/editTextStartngPoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintStartingPoint"
            android:inputType="none"
            android:textColor="#ffffff"
            android:textColorHint="#FBA16C" />

        <AutoCompleteTextView
            android:id="@+id/editTextDestination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintDest"
            android:inputType="none"
            android:textColor="#ffffff"
            android:textColorHint="#FBA16C" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp" >

            <Button
                android:id="@+id/editTripStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="2dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:background="@drawable/shape"
                android:hint="@string/hintAddStartDate"
                android:inputType="none"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="#000000"
                android:textColorHint="#FBA16C" />

            <Button
                android:id="@+id/editTripStartTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="2dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:background="@drawable/shape"
                android:hint="@string/hintAddStartTime"
                android:inputType="none"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="#000000"
                android:textColorHint="#FBA16C" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewAddDest"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:inputType="none"
                android:padding="10dp"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:text="@string/tvAddDest"
                android:textColor="#ffffff" />

            <ImageView
                android:id="@+id/ivAdd"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:src="@drawable/ic_add" />
        </LinearLayout>

        <AutoCompleteTextView
            android:id="@+id/etNewDest1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintAddDest1"
            android:inputType="none"
            android:textColor="#ffffff"
            android:textColorHint="#FBA16C" />

        <AutoCompleteTextView
            android:id="@+id/etAddDest2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintAddDest2"
            android:inputType="none"
            android:textColor="#ffffff"
            android:textColorHint="#FBA16C" />

        <AutoCompleteTextView
            android:id="@+id/etAddDest3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintAddDest3"
            android:inputType="none"
            android:textColor="#ffffff"
            android:textColorHint="#FBA16C" />

        <AutoCompleteTextView
            android:id="@+id/etAddDest4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintAddDest4"
            android:inputType="none"
            android:textColor="#ffffff"
            android:textColorHint="#FBA16C" />

        <AutoCompleteTextView
            android:id="@+id/etAddDest5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintAddDest5"
            android:inputType="none"
            android:textColor="#ffffff"
            android:textColorHint="#FBA16C" >

            <requestFocus />
        </AutoCompleteTextView>

        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnClearTrip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/orange_cornered_button"
                android:inputType="none"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:text="@string/btnClearTrip" />

            <Button
                android:id="@+id/btnSaveTrip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/orange_cornered_button"
                android:inputType="none"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:text="@string/btnSave" />

        </RelativeLayout>
    </LinearLayout>

</ScrollView>