<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/road_trip_one"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/hintName"
        android:inputType="none"
        android:textColor="#ffffff"
        android:textColorHint="#ff5500" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress|textNoSuggestions"
        android:textColor="#ffffff"
        android:textColorHint="#ff5500" >

    </EditText>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/pwdHint"
        android:inputType="textPassword"
        android:textColor="#ffffff"
        android:textColorHint="#ff5500" />

    <EditText
        android:id="@+id/editTextPasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/confPwdHint"
        android:textColorHint="#ff5500"
        android:textColor="#ffffff"
        android:inputType="textPassword|textNoSuggestions" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/orange_cornered_button"
            android:inputType="none"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/singInBtnText"
            android:paddingLeft="15sp"
            android:paddingRight="15sp"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/orange_cornered_button"
            android:inputType="none"
            android:text="@string/btnCancelText"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:paddingLeft="40sp"
            android:paddingRight="40sp"
            android:textColor="#ffffff" />

    </RelativeLayout>

</LinearLayout>
