<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}"
    android:background="@drawable/road_trip_one">

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="86dp"
        android:ems="10"
        android:hint="@string/emailHint"
        android:textColorHint="#FBA16C"
        android:textColor="#ffffff"
        android:inputType="textEmailAddress">
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/pwdHint"
        android:textColorHint="#FBA16C"
        android:textColor="#ffffff"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_gravity="center"
        android:text="@string/string_OR"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_gravity="center"
        android:inputType="none" />
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/orange_cornered_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:inputType="none"
        android:text="@string/loginBtnText"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/buttonCreateNewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/orange_cornered_button"
        android:inputType="none"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/regBtnText"
        android:textColor="#ffffff" />
    
    </RelativeLayout>

    

</LinearLayout>